--- a/index.html
+++ b/index.html
@@ -10,9 +10,23 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <!-- font-awesome-icon -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- title -->
   <title>tea-house</title>
   <!-- internal css -->
+<!-- tailwind custom color -->
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            clifford: '#da373d',
+          }
+        }
+      }
+    }
+  </script>
   <style>
     .font-manrope{
       font-family: 'Manrope', sans-serif;
@@ -20,8 +34,105 @@
   </style>
 </head>
 <body class="font-manrope">
-  <header></header>
-  <main></main>
+  <header class="caontainer mx-auto">
+    <!-- banner section start here -->
+    <div class="hero">
+      <div class="hero-content flex-col lg:flex-row">
+        <div>
+          <h1 class="text-7xl font-extrabold">
+            It's good <br>
+            tea time at The <br>
+            Tea House</h1>
+          <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+          <button class="btn btn-primary">Explore More</button>
+        </div>
+        <div>
+          <img src="images/banner.png" class="max-w-sm" />
+          <div>
+              <div class=" -mt-16 flex items-center gap-4 drop-shadow-lg bg-white p-5 w-60">
+                <i class="fa-solid fa-star text-3xl text-amber-400"></i>
+                <div>
+                  <h3 class="text-3xl">5.00</h3>
+                  <p class="">Trust Pilot Ratings</p>
+                </div>
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- banner section ends here -->
+  </header>
+  <main class="container mx-auto">
+      <!-- features section -->
+      <section class="text-center my-24">
+        <!-- features-title-and-description -->
+        <h2 class="text-5xl font-extrabold text-[#1c1c1c] mb-5">Our Featured Products</h2>
+        <p class="font-500 lg:max-w-3xl mx-auto text-[#777] mb-10">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+        <!-- features tea card container -->
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-7">
+          <!-- first card -->
+          <div class="card  p-8 bg-gradient-to-r from-[#f4f4f4] to-[#f4f4f4] shadow-xl">
+            <figure><img src="images/tea-1.png" alt="Shoes" /></figure>
+            <div class="card-body text-center">
+              <h2 class="text-2xl font-bold">Milk Tea</h2>
+              <p>Creamer could be replaced by fresh milk</p>
+            </div>
+          </div>
+          <!-- second card -->
+          <div class="card  p-8 bg-gradient-to-r from-[#f4f4f4] to-[#f4f4f4] shadow-xl">
+            <figure><img src="images/tea-2.png" alt="milk-tea" /></figure>
+            <div class="card-body text-center">
+              <h2 class="text-2xl font-bold">Black Tea</h2>
+              <p>Creamer could be replaced by fresh milk</p>
+            </div>
+          </div>
+          <!-- third card -->
+          <div class="card  p-8 bg-gradient-to-r from-[#f4f4f4] to-[#f4f4f4] shadow-xl">
+            <figure><img src="images/tea-3.png" alt="Shoes" /></figure>
+            <div class="card-body text-center">
+              <h2 class="text-2xl font-bold">Lemon Tea</h2>
+              <p>Creamer could be replaced by fresh milk</p>
+            </div>
+          </div>
+          <!-- four card -->
+          <div class="card  p-8 bg-gradient-to-r from-[#f4f4f4] to-[#f4f4f4] shadow-xl">
+            <figure><img src="images/tea-4.png" alt="Shoes" /></figure>
+            <div class="card-body text-center">
+              <h2 class="text-2xl font-bold">Green Tea</h2>
+              <p>Creamer could be replaced by fresh milk</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- great tea fresh tea section -->
+      <section class="py-24 flex flex-col md:flex-row gap-12">
+        <!-- great tea img section -->
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 flex-1">
+          <div class="rounded-xl h-36 bg-gradient-to-r from-red-100 to-amber-100"></div>
+          <div class="row-span-2 rounded-lg px-7 py-12 flex justify-center items-center bg-[#e6a6231a]">
+            <img src="images/fresh-1.png" alt="">
+          </div>
+          <div class="row-span-2 rounded-lg px-7 py-12 flex justify-center items-center bg-[#5776931a]">
+            <img src="images/fresh-2.png" alt="">
+          </div>
+          <div class="rounded-xl h-36 bg-gradient-to-r from-[#d9d9d9] to-[#ffffff]"></div>
+        </div>
+        <!-- great tea info section -->
+        <div class="space-y-5 flex-1">
+          <h3 class="text-5xl font-extrabold text-[#1c1c1c]">Great Tea, Freshly
+            <br> Presented</h3>
+          <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+          <h4 class="text-xl font-extrabold text-[#1c1c1c] mt-8">Unique Taste</h4>
+          <p>
+            A Unique and different style from other teapots gives a luxurious and minimalist impression
+          </p>
+          <h4 class="text-xl font-extrabold mt-8 text-[#1c1c1c]">Premium Quality</h4>
+          <p>
+            A Unique and different style from other teapots gives a luxurious and minimalist impression
+          </p>
+        </div>
+      </section>
+  </main>
   <footer></footer>
 </body>
 </html>
