--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
   </style>
 </head>
 <body class="font-manrope">
-  <header class="caontainer mx-auto">
+  <header class="container mx-auto">
     <!-- banner section start here -->
-    <div class="hero">
-      <div class="hero-content flex-col lg:flex-row">
+    <div class="py-20">
+      <div class="flex  flex-col lg:flex-row justify-between items-center">
         <div>
           <h1 class="text-7xl font-extrabold">
             It's good <br>
@@ -184,6 +184,54 @@
         </div>
       </section>
   </main>
-  <footer></footer>
+  <footer class=" px-48 py-10 bg-base-200 text-base-content">
+    <div class="flex justify-between my-20">
+      <img src="images/cup.png" alt="">
+      <p>
+        <span>Ready to get strated?</span>
+      <button class="btn btn-primary">Get Started</button>
+      </p>
+    </div>
+    <div class="footer">
+      <div>
+        <span class="footer-title">Services</span> 
+        <a class="link link-hover">Branding</a> 
+        <a class="link link-hover">Design</a> 
+        <a class="link link-hover">Marketing</a> 
+        <a class="link link-hover">Advertisement</a>
+      </div> 
+      <div>
+        <span class="footer-title">Company</span> 
+        <a class="link link-hover">About us</a> 
+        <a class="link link-hover">Contact</a> 
+        <a class="link link-hover">Jobs</a> 
+        <a class="link link-hover">Press kit</a>
+      </div> 
+      <div>
+        <span class="footer-title">Legal</span> 
+        <a class="link link-hover">Terms of use</a> 
+        <a class="link link-hover">Privacy policy</a> 
+        <a class="link link-hover">Cookie policy</a>
+      </div> 
+      <div>
+        <span class="footer-title">Newsletter</span> 
+        <div class="form-control w-80">
+          <label class="label">
+            <span class="label-text">Enter your email address</span>
+          </label> 
+          <div class="relative">
+            <input type="text" placeholder="username@site.com" class="py-2 bg-transparent border-b-2 border-black outline-none"/> 
+            <button class="btn btn-primary absolute top-0 right-0 rounded-full bg-gradient-to-r from-[#FF8938] to-[#F00] border-none text-white">
+              <i class="fa-solid fa-chevron-right"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="pt-5 text-center">
+      <p class="text-[#494949] font-extrabold">Copyright © 2023 - All right reserved by ACME Industries Ltd</p>
+    </div>
+  </footer>
 </body>
 </html>
